--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -186,31 +186,31 @@ body
 
           .section3__slider-counter-wrapper
             .section3__min-slider
-              .min-slider__slide-1
+              .min-slider__slide.min-slider__slide-1
                 .min-slider__icon.min-slider__icon-1
                   img(src="./images/features-icon1.png").min-slider__slide-foto-1
                 .min-slider__text
                   | Не требуем генеральной доверенности и договор купли-продажи
-              .min-slider__slide-2
+              .min-slider__slide.min-slider__slide-2
                 .min-slider__icon.min-slider__icon-2
                   img(src="./images/features-icon2.png").min-slider__slide-foto-2
                 .min-slider__text
                   | Пересчет процентов
                   br.min-slider__text
                   | за пользование займом по дням
-              .min-slider__slide-3
+              .min-slider__slide.min-slider__slide-3
                 .min-slider__icon.min-slider__icon-3
                   img(src="./images/features-icon3.png").min-slider__slide-foto-3
                 .min-slider__text
                   | При заключении договора,
                   br.min-slider__text
                   | деньги наличными сразу
-              .min-slider__slide-4
+              .min-slider__slide.min-slider__slide-4
                 .min-slider__icon.min-slider__icon-4
                   img(src="./images/features-icon3.png").min-slider__slide-foto-4
                 .min-slider__text
                   | Высокая лояльность к клиентам
-              .min-slider__slide-5
+              .min-slider__slide.min-slider__slide-5
                 .min-slider__icon.min-slider__icon-5
                   img(src="./images/features-icon3.png").min-slider__slide-foto-5
                 .min-slider__text
@@ -230,32 +230,32 @@ body
         .section4__text
           | Меньше сроки - меньше процент!
         .section4__percent
-          .section4__seven
+          .section4__seven.animated
           .section4__percent-text-1
             | Низкий процент ставок!
           .section4__percent-text-2
             | Меньше сроки меньше процент!
         .section__passport
           .section__passport-wrapper
-            .section__passport-item
+            .section__passport-item.section4__passport-item.animated
               .section__passport-icon.section4__passport-icon-1
               .section__passport-text
                 | Паспорт
                 br.section__passport-text-br
                 | гражданина РФ
-            .section__passport-item
+            .section__passport-item.section4__passport-item.animated
               .section__passport-icon.section4__passport-icon-2
               .section__passport-text
                 | Паспорт технического
                 br.section__passport-text-br
                 | средства (ПТС)
-            .section__passport-item
+            .section__passport-item.section4__passport-item.animated
               .section__passport-icon.section4__passport-icon-3
               .section__passport-text
                 | Свидетельство о регистрации
                 br.section__passport-text-br
                 | транспортного средства
-            .section__passport-item
+            .section__passport-item.section4__passport-item.animated
               .section__passport-icon.section4__passport-icon-4
               .section__passport-text
                 | Комплект ключей
@@ -313,19 +313,19 @@ body
                 | Отсутствие арестов и ограничений
         .section__passport
           .section__passport-wrapper
-            .section__passport-item
+            .section__passport-item.section6__passport-item.animated
               .section__passport-icon.section4__passport-icon-1
               .section__passport-text
                 | Паспорт гражданина РФ
-            .section__passport-item
+            .section__passport-item.section6__passport-item.animated
               .section__passport-icon.section4__passport-icon-2
               .section__passport-text
                 | Паспорт технического средства (ПТС)
-            .section__passport-item
+            .section__passport-item.section6__passport-item.animated
               .section__passport-icon.section4__passport-icon-3
               .section__passport-text
                 | Свидетельство о регистрации транспортного средства
-            .section__passport-item
+            .section__passport-item.section6__passport-item.animated
               .section__passport-icon.section4__passport-icon-4
               .section__passport-text
                 | Комплект ключей и брелоков
@@ -339,22 +339,22 @@ body
           | Получить займ
         .section7__license-wrapper
           .section7__inner
-            a(href = "./images/license-1.png" rel = "lightbox-group").funcybox-section7
+            a(href = "./images/license-1.png" rel = "lightbox-group").funcybox-section7.animated
               img(src = "images/license-1.png")
-            a(href = "./images/license-2.png" rel = "lightbox-group").funcybox-section7
+            a(href = "./images/license-2.png" rel = "lightbox-group").funcybox-section7.animated
               img(src = "images/license-2.png")
-            a(href = "./images/license-3.png" rel = "lightbox-group").funcybox-section7
+            a(href = "./images/license-3.png" rel = "lightbox-group").funcybox-section7.animated
               img(src = "images/license-3.png")
-            a(href = "./images/license-4.png" rel = "lightbox-group").funcybox-section7
+            a(href = "./images/license-4.png" rel = "lightbox-group").funcybox-section7.animated
               img(src = "images/license-4.png")
           .section7__inner
-            a(href = "./images/license-5.png" rel = "lightbox-group").funcybox-section7
+            a(href = "./images/license-5.png" rel = "lightbox-group").funcybox-section7.animated
               img(src = "images/license-5.png")
-            a(href = "./images/license-6.png" rel = "lightbox-group").funcybox-section7
+            a(href = "./images/license-6.png" rel = "lightbox-group").funcybox-section7.animated
               img(src = "images/license-6.png")
-            a(href = "./images/license-7.png" rel = "lightbox-group").funcybox-section7
+            a(href = "./images/license-7.png" rel = "lightbox-group").funcybox-section7.animated
               img(src = "images/license-7.png")
-            a(href = "./images/license-8-b.jpg" rel = "lightbox-group").funcybox-section7
+            a(href = "./images/license-8-b.jpg" rel = "lightbox-group").funcybox-section7.animated
               img(src = "images/license-8.png")
     .section.section8#section-8
       .container.section8-container
@@ -362,40 +362,40 @@ body
           | часто задаваемые вопросы
         .section8__ask-wrapper
           .section8__ask-wrapper-1
-            a(href="#" data-slide = '0').section8__ask.section8__ask-1
+            a(href="#" data-slide = '0').section8__ask.section8__ask-1.animated
               | 1. Сколько денег я получу за свой автомобиль (процент от стоимости авто)?
-            a(href="#" data-slide = '1').section8__ask.section8__ask-2
+            a(href="#" data-slide = '1').section8__ask.section8__ask-2.animated
               | 2. Если на руках дубликат ПТС (потерян ПТС, кончилось место в ПТС т.д.)?
-            a(href="#" data-slide = '2').section8__ask.section8__ask-3
+            a(href="#" data-slide = '2').section8__ask.section8__ask-3.animated
               | 3. Как быстро я смогу получить ПТС после оплаты займа?
-            a(href="#" data-slide = '3').section8__ask.section8__ask-4
+            a(href="#" data-slide = '3').section8__ask.section8__ask-4.animated
               | 4. Нужно ли приезжать в офис на автомобиле? Что, если автомобиль не на ходу?
-            a(href="#" data-slide = '4').section8__ask.section8__ask-5
+            a(href="#" data-slide = '4').section8__ask.section8__ask-5.animated
               | 5. Нужно ли оформлять на Молл-Авто ломбард генеральную доверенность?
-            a(href="#" data-slide = '5').section8__ask.section8__ask-6
+            a(href="#" data-slide = '5').section8__ask.section8__ask-6.animated
               | 6. Нужно ли выезжать еще куда-то для заключения договора?
-            a(href="#" data-slide = '6').section8__ask.section8__ask-7
+            a(href="#" data-slide = '6').section8__ask.section8__ask-7.animated
               | 7. Что будет при просрочке платежей?
-            a(href="#" data-slide = '7').section8__ask.section8__ask-8
+            a(href="#" data-slide = '7').section8__ask.section8__ask-8.animated
               | 8. При просрочке платежей смогут забрать мое авто?
-            a(href="#" data-slide = '8').section8__ask.section8__ask-9
+            a(href="#" data-slide = '8').section8__ask.section8__ask-9.animated
               | 9. Если долго не вносить платежи (месяц, два) или нет денег для того, чтобы вносить платежи регулярно, что будет?
           .section8__ask-wrapper-2
-            a(href="#" data-slide = '9').section8__ask.section8__ask-10
+            a(href="#" data-slide = '9').section8__ask.section8__ask-10.animated
               | 10. Какие документы могут быть необходимы для получения заёмных денег под ПТС?
-            a(href="#" data-slide = '10').section8__ask.section8__ask-11
+            a(href="#" data-slide = '10').section8__ask.section8__ask-11.animated
               | 11. Если я использую автомобиль по доверенности, могу ли я получить деньги, заложив ПТС?
-            a(href="#" data-slide = '11').section8__ask.section8__ask-12
+            a(href="#" data-slide = '11').section8__ask.section8__ask-12.animated
               | 12. Автомобиль взят в кредит, ПТС находится в банке. Можно ли в таком случае взять займ?
-            a(href="#" data-slide = '12').section8__ask.section8__ask-13
+            a(href="#" data-slide = '12').section8__ask.section8__ask-13.animated
               | 13. После оплаты суммы займа возникают ли скрытые проценты?
-            a(href="#" data-slide = '13').section8__ask.section8__ask-14
+            a(href="#" data-slide = '13').section8__ask.section8__ask-14.animated
               | 14. Ставится ли какая-либо отметка о залоге в ПТС?
-            a(href="#" data-slide = '14').section8__ask.section8__ask-15
+            a(href="#" data-slide = '14').section8__ask.section8__ask-15.animated
               | 15. Какие документы после заключения сделки останутся в Молл-Автоломбард?
-            a(href="#" data-slide = '15').section8__ask.section8__ask-16
+            a(href="#" data-slide = '15').section8__ask.section8__ask-16.animated
               | 16. У меня нет второго комплекта ключей?
-            a(href="#" data-slide = '16').section8__ask.section8__ask-17
+            a(href="#" data-slide = '16').section8__ask.section8__ask-17.animated
               | 17. Я могу получить займ если на автомобиль наложен арест или запрет на регистрационные действия?
         .section8__your-ask
           .section8__your-ask-text
@@ -469,16 +469,16 @@ body
             | Вы можете оставить Ваши контакты и мы сами свяжемся с Вами
           a(href="#").btn.section10__btn
             | Оставить контакты
-          .section10__location
+          .section10__location.animated.section10-item
             span.section10__location-icon
             | 454048, г. Челябинск, ул. Образцова, 25
-          .section10__time
+          .section10__time.animated.section10-item
             span.section10__time-icon
             | с пн.-пт. с 9-00 до 19-00
-          .section10__tel
+          .section10__tel.animated.section10-item
             span.section10__tel-icon
             | +7 922 183-12-52
-          .section10__email
+          .section10__email.animated.section10-item
             span.section10__email-icon
             a(href= "mailto:moll.avtolombard@mail.ru")
               | moll.avtolombard@mail.ru
