--- a/app/stylesheets/sections/_section3.scss
+++ b/app/stylesheets/sections/_section3.scss
@@ -28,8 +28,6 @@
 .section3__big-slider {
   position: relative;
 
-  overflow: hidden;
-
   display: inline-block;
 
   z-index: 10;
@@ -37,20 +35,18 @@
   width: 100%;
   min-height: 500px;
 
-  .slick-active {
+
+}
+
+.section3__big-slider .slick-active {
     opacity: 1 !important;
   }
-}
 
 .big-slider__slide {
   width: 660px;
   height: 460px;
   opacity: 0 !important;
   transition: opacity 1s ease;
-}
-
-.big-slider__slide-foto {
-
 }
 
 .big-slider__slide img {
@@ -69,27 +65,32 @@
 }
 
 .big-slider__slide-foto-1 {
-  top: 10px;
-
+  position: relative;
+  top: 30px;
+  left: -130px;
 }
 
 .big-slider__slide-foto-2 {
+  position: relative;
   top: 20px;
-  left: -100px;
+  left: -170px;
 }
 
 .big-slider__slide-foto-3 {
+  position: relative;
   top: 35px;
-  left: -20px;
+  left: -120px;
 }
 
 .big-slider__slide-foto-4 {
-  left: -180px;
+  position: relative;
+  left: -230px;
 }
 
 .big-slider__slide-foto-5 {
-  top: 20px;
-  left: 40px;
+  position: relative;
+  top: 40px;
+  left: -140px;
 }
 
 .big-slider__slide-foto-4-img {
@@ -115,8 +116,8 @@
   height: 459px;
   border: 50px solid rgba(79, 87, 100, 0.5);
   border-radius: 50%;
-  top: 40%;
-  left: 50%;
+  top: 50%;
+  left: 30%;
   transform: translate(-50%, -50%);
 }
 
@@ -142,6 +143,14 @@
   color: #fff;
 }
 
+.min-slider__slide {
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+
+.min-slider__slide.slick-current {
+  opacity: 1 !important;
+}
 
 .min-slider__icon {
   display: block;
@@ -300,12 +309,17 @@
     height: 400px;
   }
 
+  .big-slider__slide-circle {
+    left: 38%;
+  }
+
   .big-slider__slide-foto {
     z-index: 10;
   }
 
   .big-slider__slide-foto-1 {
-    top: 10px;
+    top: 15px;
+    left: -10%;
     width: 403px;
     height: 380px;
 
@@ -313,7 +327,7 @@
 
   .big-slider__slide-foto-2 {
     top: 20px;
-    left: -90px;
+    left: -14%;
 
     width: 503px;
     height: 400px;
@@ -321,14 +335,14 @@
 
   .big-slider__slide-foto-3 {
     top: 35px;
-    left: -20px;
+    left: -10%;
 
     width: 455px;
     height: 370px;
   }
 
   .big-slider__slide-foto-4 {
-    left: -160px;
+    left: -24%;
 
     width: 705px;
     height: 410px;
@@ -337,7 +351,7 @@
 
   .big-slider__slide-foto-5 {
     top: 20px;
-    left: 40px;
+    left: -10%;
 
     width: 314px;
     height: 380px;
@@ -394,6 +408,12 @@
     padding-bottom: 30px;
   }
 
+  .slider-inner {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+  }
+
   .section3__big-slider {
     display: block;
     width: 500px;
@@ -401,16 +421,16 @@
   }
 
   .big-slider__slide-circle {
-    left: 37px;
+    left: 50%;
   }
 
   .big-slider__slide-foto-1 {
-    left: 50px;
+    left: 0;
   }
 
   .big-slider__slide-foto-2 {
     top: 20px;
-    left: -49px;
+    left: -69px;
 
     width: 503px;
     height: 400px;
@@ -418,14 +438,14 @@
 
   .big-slider__slide-foto-3 {
     top: 35px;
-    left: 20px;
+    left: -20px;
 
     width: 455px;
     height: 370px;
   }
 
   .big-slider__slide-foto-4 {
-    left: -150px;
+    left: -140px;
 
     width: 705px;
     height: 410px;
@@ -434,7 +454,7 @@
 
   .big-slider__slide-foto-5 {
     top: 20px;
-    left: 80px;
+    left: -20px;
 
     width: 314px;
     height: 380px;
@@ -532,36 +552,37 @@
   }
 
   .big-slider__slide-foto-1 {
-    left: 0;
+    left: -10px;
     width: 275px;
     height: 300px;
   }
 
   .big-slider__slide-foto-2 {
+    left: -40px;
     width: 320px;
     height: 280px;
   }
   .big-slider__slide-foto-3 {
     top: 20px;
-    left: -10px;
+    left: -30px;
     width: 330px;
     height: 295px;
   }
 
   .big-slider__slide-foto-4 {
-    left: -110px;
+    left: -115px;
     width: 460px;
     height: 290px;
   }
 
   .big-slider__slide-foto-5 {
-    left: 20px;
+    left: -20px;
     width: 235px;
     height: 260px;
   }
 
   .big-slider__slide-circle {
-    left: 0;
+    left: 50%;
 
     width: 290px;
     height: 290px;
