--- a/app/stylesheets/tools/_animation.scss
+++ b/app/stylesheets/tools/_animation.scss
@@ -695,6 +695,34 @@
   }
 }
 
+@keyframes fadeInUpAsk {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 0.7;
+    transform: none;
+  }
+}
+
+.fadeInUpAsk {
+  animation-name: fadeInUpAsk;
+}
+
+@keyframes fadeInUpBig {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 2000px, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
 .fadeInUpBig {
   animation-name: fadeInUpBig;
 }
