--- a/app/stylesheets/sections/_section4.scss
+++ b/app/stylesheets/sections/_section4.scss
@@ -25,6 +25,7 @@
   top: -180px;
   right: -280px;
   z-index: 20;
+  opacity: 0;
 
   width: 376px;
   height: 319px;
@@ -65,6 +66,8 @@
   font-size: 16px;
   line-height: 1.5;
   color: #030206;
+
+ opacity: 0;
 }
 
 .section__passport-item:last-child {
@@ -122,6 +125,7 @@
     right: -280px;
     z-index: 20;
 
+    opacity: 0;
 
     width: 400px;
     height: 285px;
