--- a/app/stylesheets/sections/_section2.scss
+++ b/app/stylesheets/sections/_section2.scss
@@ -294,10 +294,15 @@
     margin-bottom: 30px;
   }
 
+  .section2__item-3-mob {
+    opacity: 1 !important;
+  }
+
   .section2__item {
     display: block;
     margin: 0 auto;
     margin-bottom: 20px;
+    opacity: 1;
 
     background-position: left;
   }
