--- a/app/stylesheets/sections/_section1.scss
+++ b/app/stylesheets/sections/_section1.scss
@@ -6,7 +6,7 @@
   font-family: Roboto;
   color: #ffffff;
 
-  background: url('../images/1-background.jpg') no-repeat center;
+  background: url('../images/1-background.png') no-repeat center;
   background-size: cover;
 }
 
@@ -61,6 +61,7 @@
 
   color: #ffffff;
 
+
   border-radius: 5px;
   background: none;
   border: solid 1px #ffffff;
@@ -72,9 +73,20 @@
   border: solid 1px #d24a43;
 }
 
-.section1__form-text:focus {
+.form-block {
+  display: block;
+  position: relative;
+  z-index: 20;
+  max-width: 425px;
+  width: 100%;
+}
 
-  border: solid 1px #accc3d;
+label.error {
+  position: absolute;
+  z-index: 10;
+  right: 10px;
+  top: 10px;
+  color: #d24a43;
 }
 
 .section1__form-tel {
@@ -270,6 +282,14 @@ span.checkbox__no {
 
     font-family: Roboto;
     font-size: 15px;
+  }
+
+  .form-block {
+    max-width: 405px;
+  }
+
+  label.error {
+    top: 8px;
   }
 
   .section1__form-text {
