--- a/app/stylesheets/sections/_section3.scss
+++ b/app/stylesheets/sections/_section3.scss
@@ -1,7 +1,7 @@
 .section3 {
   overflow: hidden;
 
-  background: url('../images/2-background.jpg') no-repeat center;
+  background: url('../images/2-background.png') no-repeat center;
   background-size: cover;
 }
 
