--- a/app/stylesheets/sections/_section5.scss
+++ b/app/stylesheets/sections/_section5.scss
@@ -1,7 +1,7 @@
 .section5 {
   padding-bottom: 30px;
 
-  background: url('../images/3-background.jpg') no-repeat center;
+  background: url('../images/3-background.png') no-repeat center;
   background-size: cover;
   color: #fff;
 }
