--- a/app/stylesheets/sections/_section9.scss
+++ b/app/stylesheets/sections/_section9.scss
@@ -2,7 +2,7 @@
   padding-bottom: 10px;
   overflow: hidden;
 
-  background: url('../images/5-background.jpg') no-repeat center;
+  background: url('../images/5-background.png') no-repeat center;
   background-size: cover;
   color: #fff;
 }
