--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -62,7 +62,8 @@ body
       li
         a(href="#page-10").main-nav__link
           | Контакты
-  a(href="#page-1").arrow-up
+  .arrow-up-container
+    a(href="#page-1").arrow-up
   div#fullpage
     .section.section1#section-1
       .container
