--- a/app/stylesheets/sections/_page-header.scss
+++ b/app/stylesheets/sections/_page-header.scss
@@ -233,14 +233,14 @@
   display: block;
   width: 60px;
   height: 60px;
-  background: url(../images/arrow-up.png) no-repeat center;
+  background: url('../images/arrow-up.png') no-repeat center;
   opacity: 0;
 
   transition: opacity 0.3s;
 }
 
 .arrow-up:hover {
-  background: url(../images/arrow-up_hover.png) no-repeat center;
+  background: url('../images/arrow-up_hover.png') no-repeat center;
 }
 
 @media (max-width: 1712px){
